[gd_scene load_steps=71 format=3 uid="uid://b6qu3o77yl485"]

[ext_resource type="Script" path="res://scripts/combat/combat.gd" id="1_01vdh"]
[ext_resource type="Texture2D" uid="uid://ce5jpmohkekuf" path="res://graphics/combat/layers/parallax-demon-woods-bg.png" id="1_y1pa5"]
[ext_resource type="Texture2D" uid="uid://cu6prlq3iacg3" path="res://graphics/combat/layers/parallax-demon-woods-far-trees.png" id="2_7bvm6"]
[ext_resource type="AudioStream" uid="uid://djmxa7527h6if" path="res://audio/combat/music/4. Ready As Can Be - 208bpm - LOOP 25s.wav" id="2_rbn1e"]
[ext_resource type="Texture2D" uid="uid://cptafrt2itnu5" path="res://graphics/combat/layers/parallax-demon-woods-mid-trees.png" id="3_2pjn0"]
[ext_resource type="Texture2D" uid="uid://dy4pvnniebuhs" path="res://graphics/combat/layers/parallax-demon-woods-close-trees.png" id="4_d5a1p"]
[ext_resource type="Texture2D" uid="uid://djmjmpjldiv0s" path="res://graphics/enemy/No_Loop_Monster_Sprite_Sheet.png" id="6_44h1u"]
[ext_resource type="Texture2D" uid="uid://daoepyu8edxuf" path="res://graphics/combat/Item_Bar.png" id="6_kyhtt"]
[ext_resource type="PackedScene" uid="uid://hkpankg5fn8t" path="res://scenes/combat/enemy_health_bar.tscn" id="6_wl4x3"]
[ext_resource type="PackedScene" uid="uid://c6quxq47bsybe" path="res://scenes/combat/player_health_bar.tscn" id="8_hohhx"]
[ext_resource type="Texture2D" uid="uid://dvy3io8i7fsrw" path="res://graphics/player/Combat/Counselor_M_Idle_Animation_Sprite_Sheet.png" id="9_6pbrt"]
[ext_resource type="Texture2D" uid="uid://bog0ogmkj2eab" path="res://graphics/player/Combat/Counselor_F_Idle_Animation_Sprite_Sheet.png" id="10_vqru2"]
[ext_resource type="Texture2D" uid="uid://dg81188p0ri4a" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene1.png" id="13_fmth2"]
[ext_resource type="Texture2D" uid="uid://d2cydwj8dns1b" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene2.png" id="14_gn6bw"]
[ext_resource type="Texture2D" uid="uid://ccheimt6yadqx" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene3.png" id="15_l02tn"]
[ext_resource type="Texture2D" uid="uid://dbs8jsyfrlvhs" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene4.png" id="16_ty0uh"]
[ext_resource type="Texture2D" uid="uid://cnlju3vqe47tl" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene5.png" id="17_v5720"]
[ext_resource type="Texture2D" uid="uid://0h33gr5j3b0o" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene6.png" id="18_xut77"]
[ext_resource type="Texture2D" uid="uid://chlaeqou2ocnf" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene7.png" id="19_masjo"]
[ext_resource type="Texture2D" uid="uid://jqfw3c3mlufu" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene8.png" id="20_y2o2u"]
[ext_resource type="Texture2D" uid="uid://66df0eaiwjfk" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene9.png" id="21_ywgdr"]
[ext_resource type="Texture2D" uid="uid://s70kxo3r8uwn" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene10.png" id="22_pkjr3"]
[ext_resource type="Texture2D" uid="uid://bse1cc056a8ri" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene11.png" id="23_58m8p"]
[ext_resource type="Texture2D" uid="uid://c65viwxqaugf6" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene12.png" id="24_qbtj3"]
[ext_resource type="Texture2D" uid="uid://ckdvvgdttajp6" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene13.png" id="25_j3fr3"]
[ext_resource type="Texture2D" uid="uid://2umbyqk3cgkm" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene14.png" id="26_o0k16"]
[ext_resource type="Texture2D" uid="uid://dwwqor0cqac8a" path="res://graphics/cut_scenes/to_combat/PNGs/Campfire Cutscene15.png" id="27_0d4i1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iw43b"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5h2l"]
atlas = ExtResource("10_vqru2")
region = Rect2(0, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0yc5"]
atlas = ExtResource("10_vqru2")
region = Rect2(580, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1x35"]
atlas = ExtResource("10_vqru2")
region = Rect2(1160, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxsma"]
atlas = ExtResource("10_vqru2")
region = Rect2(1740, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrry5"]
atlas = ExtResource("10_vqru2")
region = Rect2(2320, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ios33"]
atlas = ExtResource("10_vqru2")
region = Rect2(0, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8ss"]
atlas = ExtResource("10_vqru2")
region = Rect2(580, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_kftjp"]
atlas = ExtResource("10_vqru2")
region = Rect2(1160, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6x2q"]
atlas = ExtResource("10_vqru2")
region = Rect2(1740, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_y47jh"]
atlas = ExtResource("10_vqru2")
region = Rect2(2320, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2d6p"]
atlas = ExtResource("10_vqru2")
region = Rect2(0, 2600, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqnqu"]
atlas = ExtResource("10_vqru2")
region = Rect2(580, 2600, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oh4b"]
atlas = ExtResource("9_6pbrt")
region = Rect2(0, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f32m"]
atlas = ExtResource("9_6pbrt")
region = Rect2(580, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt1vj"]
atlas = ExtResource("9_6pbrt")
region = Rect2(1160, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsddl"]
atlas = ExtResource("9_6pbrt")
region = Rect2(1740, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgt4d"]
atlas = ExtResource("9_6pbrt")
region = Rect2(2320, 0, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2radb"]
atlas = ExtResource("9_6pbrt")
region = Rect2(0, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgapu"]
atlas = ExtResource("9_6pbrt")
region = Rect2(580, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_u46ig"]
atlas = ExtResource("9_6pbrt")
region = Rect2(1160, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_mraxw"]
atlas = ExtResource("9_6pbrt")
region = Rect2(1740, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqp4v"]
atlas = ExtResource("9_6pbrt")
region = Rect2(2320, 1300, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxvmp"]
atlas = ExtResource("9_6pbrt")
region = Rect2(0, 2600, 580, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt71a"]
atlas = ExtResource("9_6pbrt")
region = Rect2(580, 2600, 580, 1300)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2hfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5h2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0yc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1x35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxsma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrry5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ios33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym8ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kftjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6x2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y47jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2d6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqnqu")
}],
"loop": true,
"name": &"F_default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oh4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f32m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt1vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsddl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgt4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2radb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgapu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u46ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mraxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqp4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxvmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt71a")
}],
"loop": true,
"name": &"M_default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lnaf3"]
atlas = ExtResource("6_44h1u")
region = Rect2(0, 0, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwlja"]
atlas = ExtResource("6_44h1u")
region = Rect2(1920, 0, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i0ar"]
atlas = ExtResource("6_44h1u")
region = Rect2(3840, 0, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeb6a"]
atlas = ExtResource("6_44h1u")
region = Rect2(5760, 0, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxbfs"]
atlas = ExtResource("6_44h1u")
region = Rect2(7680, 0, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_kitfa"]
atlas = ExtResource("6_44h1u")
region = Rect2(0, 1920, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxbbu"]
atlas = ExtResource("6_44h1u")
region = Rect2(1920, 1920, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bag6"]
atlas = ExtResource("6_44h1u")
region = Rect2(3840, 1920, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp5x4"]
atlas = ExtResource("6_44h1u")
region = Rect2(5760, 1920, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_sks84"]
atlas = ExtResource("6_44h1u")
region = Rect2(7680, 1920, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry7kw"]
atlas = ExtResource("6_44h1u")
region = Rect2(0, 3840, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf4gf"]
atlas = ExtResource("6_44h1u")
region = Rect2(1920, 3840, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ok72"]
atlas = ExtResource("6_44h1u")
region = Rect2(3840, 3840, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6a4w"]
atlas = ExtResource("6_44h1u")
region = Rect2(5760, 3840, 1920, 1920)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuueq"]
atlas = ExtResource("6_44h1u")
region = Rect2(7680, 3840, 1920, 1920)

[sub_resource type="SpriteFrames" id="SpriteFrames_tu00j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnaf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwlja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i0ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeb6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxbfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kitfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxbbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bag6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp5x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sks84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry7kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf4gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ok72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6a4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuueq")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ic41v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_fmth2")
}, {
"duration": 1.0,
"texture": ExtResource("14_gn6bw")
}, {
"duration": 1.0,
"texture": ExtResource("15_l02tn")
}, {
"duration": 1.0,
"texture": ExtResource("16_ty0uh")
}, {
"duration": 1.0,
"texture": ExtResource("17_v5720")
}, {
"duration": 1.0,
"texture": ExtResource("18_xut77")
}, {
"duration": 1.0,
"texture": ExtResource("19_masjo")
}, {
"duration": 1.0,
"texture": ExtResource("20_y2o2u")
}, {
"duration": 1.0,
"texture": ExtResource("21_ywgdr")
}, {
"duration": 1.0,
"texture": ExtResource("22_pkjr3")
}, {
"duration": 1.0,
"texture": ExtResource("23_58m8p")
}, {
"duration": 1.0,
"texture": ExtResource("24_qbtj3")
}, {
"duration": 1.0,
"texture": ExtResource("25_j3fr3")
}, {
"duration": 1.0,
"texture": ExtResource("26_o0k16")
}, {
"duration": 1.0,
"texture": ExtResource("27_0d4i1")
}],
"loop": false,
"name": &"default",
"speed": 3.1
}]

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01vdh")

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rbn1e")
volume_db = -6.948
autoplay = true
bus = &"combat_music"

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1, 0.309804, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_y1pa5")

[node name="Far" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7bvm6")
stretch_mode = 4

[node name="Mid" type="TextureRect" parent="Background/Far"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2pjn0")
stretch_mode = 4

[node name="Close" type="TextureRect" parent="Background/Far/Mid"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_d5a1p")
stretch_mode = 4

[node name="BottomArea" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 528.0
offset_right = 1155.0
offset_bottom = 648.0
color = Color(0.415686, 0, 0.0196078, 1)

[node name="Itembar" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 555.0
offset_right = 6280.0
offset_bottom = 1055.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_kyhtt")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Itembar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00377049
anchor_top = 0.094
anchor_right = 0.99459
anchor_bottom = 0.934
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton3" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton4" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton5" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton6" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton7" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton8" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton9" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton10" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton11" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton12" type="TextureButton" parent="Itembar/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="EnemyHealthBar" parent="." instance=ExtResource("6_wl4x3")]
layout_mode = 0
offset_left = 126.0
offset_top = 28.0
offset_right = 1031.0
offset_bottom = 66.0
value = 90.0

[node name="Label" type="Label" parent="EnemyHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 90/100
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealthBar" parent="." instance=ExtResource("8_hohhx")]
layout_mode = 0
offset_left = 17.0
offset_top = 575.0
offset_right = 169.0
offset_bottom = 616.0

[node name="Label" type="Label" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 50/100
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 541.0
offset_right = 129.0
offset_bottom = 564.0
text = "Counselor
"

[node name="EnemyStatusBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 73.0
offset_right = 276.0
offset_bottom = 96.0

[node name="StatusBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 618.0
offset_right = 170.0
offset_bottom = 641.0

[node name="TextBox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 528.0
offset_right = 1155.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iw43b")

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "You've been poisoned"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(112, 429)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_x2hfl")
animation = &"F_default"

[node name="Enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(672, 297)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_tu00j")

[node name="Cutscene" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(576, 323.5)
scale = Vector2(0.2316, 0.2596)
sprite_frames = SubResource("SpriteFrames_ic41v")

[connection signal="animation_finished" from="Cutscene" to="." method="_on_cutscene_animation_finished"]
